<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cognitive_arch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pedop4@gmail.com">tapi1300</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_bt_actions</depend>
  <depend>tf2_ros</depend>
  <!-- #****# -->
  <depend>gb_attention</depend>
  <depend>gb_attention_msgs</depend>
  <!-- #****# -->
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
